<resources>
    <string name="app_name">دوستجو</string>
    <string name="title_activity_blinker">دوستجو</string>
    <string name="title_activity_settings">تنظیمات دوستجو</string>
    <string name="app_ver">1.0.0</string>

    <string name="action_settings">تنظیمات</string>

    <string name="action_share">اشتراک با...</string>
    <string name="action_sendsms">ارسال با پیامک</string>

    <string name="share_string">دنبال نور چشمک زن %1$s بگرد. دوستجو رو روشن کردم.</string>
    <string name="share_using">ارسال با</string>

    <string name="app_design">طراح و برنامه نویس: محسن میرحسینی ارگي</string>
    <string name="app_facebook1">به ما بپيونديد:</string>
    <string name="app_facebook2" translatable="false">http://www.facebook.com/doostjoo</string>
    <string name="app_email" translatable="false">doostjoo@mirhoseini.com</string>


    <string-array name="colors_name">
        <item>سبز</item>
        <item>آبی</item>
        <item>بنفش</item>
        <item>زرد</item>
        <item>نارنجی</item>
        <item>قرمز</item>
    </string-array>

    <string-array name="quick_start_colors">
        <item>غیرفعال</item>
        <item>سبز</item>
        <item>آبی</item>
        <item>بنفش</item>
        <item>زرد</item>
        <item>نارنجی</item>
        <item>قرمز</item>
    </string-array>

    <string name="color_package">پکیج رنگ</string>
    <string name="color_package_details">از این طریق میتوانید به رنگهای متنوع دیگری دسترسی پیدا کنید.</string>

    <string name="quick_start">شروع فوری</string>
    <string name="quick_start_details">با فعال کردن این گزینه اپلیکیشن در بدو ورود اقدام به نمایش رنگ انتخابی شما میکند.</string>

    <string name="active">فعال</string>
    <string name="inactive">غیرفعال</string>
    <string name="close">بستن</string>
    <string name="open">بازکردن</string>

    <string-array name="color_packages_name">
        <item>کلاسیک</item>
        <item>تیره</item>
        <item>نئون</item>
        <item>مداد شمعی</item>
    </string-array>

    <string name="crash_toast_text">وقوع خطا در برنامه \n این مشکل به صورت خودکار به پشتیبانی ارسال می شود</string>
    <string name="crash_dialog_title">خطا در اجرای اپلیکیشن</string>
    <string name="crash_dialog_text">خطایی در اجرای اپلیکیشن وقوع داده که موجب توقف آن شده. شما میتوانید با ارسال این خطا در رفع آن ما را یاری رسانید.</string>
    <string name="crash_dialog_comment_prompt">میتوانید توضیحات خود را اضافه نمایید:</string>
    <string name="crash_dialog_ok_toast">با تشکر از همکاری شما !</string>
    <string name="crash_user_email_label">ایمیل شما برای تماس در صورت لزوم</string>
</resources>
